# bitirme

./: data-prepper-config.yaml  data-prepper-data-prepper-config.yaml  k3d-bitirme-local.yaml  observability-stack.yml  otel-collector-config.yaml
k8s/: deploy-all.sh  grafana.yaml  label-nodes.sh  loki.yaml  namespace.yaml  opensearch-stack-deployment.yaml  order-service-deployment.yaml  payment-service-deployment.yaml  postgres-statefulset.yaml  product-service-deployment.yaml  prometheus.yaml  promtail.yaml  redis-deployments.yaml  secrets.yaml  user-service-deployment.yaml
services/django-service/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  otel_config.py  readme.md  requirements.txt
services/order-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  makefile
services/payment-service-rust/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  makefile
services/payment-service-rust/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml  service.yaml
services/payment-service-rust/migrations/: 001_create_payments_table.sql
services/payment-service-rust/src/: config.rs  database.rs  dto.rs  main.rs  models.rs  telemetry.rs
services/payment-service-rust/src/handlers/: health.rs  mod.rs  payment.rs
services/payment-service-rust/src/middleware/: auth.rs
services/payment-service-rust/src/services/: mod.rs  payment_service.rs  user_client.rs
(+107 files in other folders)
